# Process this file with autoconf to produce a configure script.
AC_INIT(xfce_theme_draw.c)
THEME="xfce"

AC_PREREQ(2.52)

VERSION=2.0.11
PACKAGE=gtk-${THEME}-engine
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

## libtool support (for plugins)
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_PROG_CC
AC_PROG_INSTALL

AC_C_INLINE
AC_C_CONST

AC_PATH_XTRA
AC_HEADER_STDC

## Versions of dependencies
GLIB_REQUIRED_VERSION=2.0.0
GTK_REQUIRED_VERSION=2.0.0

AC_DEFINE_UNQUOTED(GLIB_REQUIRED_VERSION, $GLIB_REQUIRED_VERSION, [Define glib required version.])
AC_DEFINE_UNQUOTED(GTK_REQUIRED_VERSION, $GTK_REQUIRED_VERSION, [Define gtk required version.])

AC_SUBST(GLIB_REQUIRED_VERSION)
AC_SUBST(GTK_REQUIRED_VERSION)

PKG_CHECK_MODULES(XFCE, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION)

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(GTK_VERSION)
AC_SUBST(XFCE_CFLAGS)
AC_SUBST(XFCE_LIBS)

AC_OUTPUT([
gtk-xfce-engine-2.spec
Makefile
Theme/gtk-2.0/Makefile
Theme/Makefile
Theme_b5/Makefile
Theme_b5/gtk-2.0/Makefile
Theme_basic/Makefile
Theme_basic/gtk-2.0/Makefile
Theme_curve/gtk-2.0/Makefile
Theme_curve/Makefile
Theme_etria/Makefile
Theme_etria/gtk-2.0/Makefile
Theme_funklor/Makefile
Theme_funklor/gtk-2.0/Makefile
Theme_light/Makefile
Theme_light/gtk-2.0/Makefile
Theme_redmondxp/Makefile
Theme_redmondxp/gtk-2.0/Makefile
Theme_smooth/gtk-2.0/Makefile
Theme_smooth/Makefile
Theme_saltlake/gtk-2.0/Makefile
Theme_saltlake/Makefile
Theme_stellar/Makefile
Theme_stellar/gtk-2.0/Makefile
])
