# Process this file with autoconf to produce a configure script.
AC_INIT([gtk-xfce-engine], [2.6.0], [http://bugzilla.xfce.org])

AC_PREREQ(2.52)

AM_INIT_AUTOMAKE([1.8 dist-bzip2 tar-ustar])
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Find out if we're building under cygwin
AM_CONDITIONAL([HAVE_CYGWIN], [test "`uname | grep \"CYGWIN\"`" != ""])

## libtool support (for plugins)
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_PROG_CC
AC_PROG_INSTALL

AC_C_INLINE
AC_C_CONST

AC_PATH_XTRA
AC_HEADER_STDC

## Versions of dependencies
GLIB_REQUIRED_VERSION=2.0.0
GTK_REQUIRED_VERSION=2.0.0

AC_DEFINE_UNQUOTED(GLIB_REQUIRED_VERSION, $GLIB_REQUIRED_VERSION, [Define glib required version.])
AC_DEFINE_UNQUOTED(GTK_REQUIRED_VERSION, $GTK_REQUIRED_VERSION, [Define gtk required version.])

AC_SUBST(GLIB_REQUIRED_VERSION)
AC_SUBST(GTK_REQUIRED_VERSION)

PKG_CHECK_MODULES(XFCE, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION)

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(GTK_VERSION)
AC_SUBST(XFCE_CFLAGS)
AC_SUBST(XFCE_LIBS)

AC_OUTPUT([
gtk-xfce-engine-2.spec
Makefile
src/Makefile
themes/b5/Makefile
themes/b5/gtk-2.0/Makefile
themes/xfce/gtk-2.0/Makefile
themes/xfce/Makefile
themes/xfce-4.0/gtk-2.0/Makefile
themes/xfce-4.0/Makefile
themes/xfce-4.2/gtk-2.0/Makefile
themes/xfce-4.2/Makefile
themes/xfce-4.4/Makefile
themes/xfce-4.4/gtk-2.0/Makefile
themes/basic/gtk-2.0/Makefile
themes/basic/Makefile
themes/cadmium/gtk-2.0/Makefile
themes/cadmium/Makefile
themes/curve/gtk-2.0/Makefile
themes/curve/Makefile
themes/dawn/gtk-2.0/Makefile
themes/dawn/Makefile
themes/dusk/gtk-2.0/Makefile
themes/dusk/Makefile
themes/kolors/gtk-2.0/Makefile
themes/kolors/Makefile
themes/kde2/gtk-2.0/Makefile
themes/kde2/Makefile
themes/light/Makefile
themes/light/gtk-2.0/Makefile
themes/orange/gtk-2.0/Makefile
themes/orange/Makefile
themes/redmondxp/gtk-2.0/Makefile
themes/redmondxp/Makefile
themes/saltlake/gtk-2.0/Makefile
themes/saltlake/Makefile
themes/smooth/gtk-2.0/Makefile
themes/smooth/Makefile
themes/stellar/gtk-2.0/Makefile
themes/stellar/Makefile
themes/winter/gtk-2.0/Makefile
themes/winter/Makefile
themes/Makefile
])
