themedir = $(datadir)/themes/Xfce-flat/gtk-3.0
appsdir = $(datadir)/themes/Xfce-flat/gtk-3.0/apps
theme_DATA = \
	apps/xfce.css	\
	gtk.css		\
	gtk-widgets.css	\
	settings.ini
apps_DATA = \
	apps/gnome-applications.css	\
	apps/granite-widgets.css	\
	apps/lightdm-gtk-greeter.css	\
	apps/lightdm-unity-greeter.css	\
	apps/unity.css			\
	apps/xfce.css

EXTRA_DIST = \
	$(theme_DATA)	\
	$(apps_DATA)

